# KinectGestureRecognition

./: HandTrack.cpp  Kinect.sln  OpenCVKinect.cpp  README.md
Kinect/: Kinect.vcxproj  Kinect.vcxproj.filters  OpenCVKinect2D.cpp
Kinect/Openni2_Opencv_wrapper-master/: CMakeLists.txt  README.md  openni2_wrapper.cpp  openni2_wrapper.h  wrapper_test.cpp
Kinect/Openni2_Opencv_wrapper-master/install/: CMakeCache.txt
Kinect3D/: Kinect3D.vcxproj  Kinect3D.vcxproj.filters  OpenCVKinect3D.cpp
NodeWebkit/: Gesture.nw
NodeWebkit/Gesture/: 3D.js  car.js  index.html  package.json
